--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_and_ranks = [] \n",
+    "names_and_ranks_test = [] \n",
+    "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
