--- a/index.ipynb
+++ b/index.ipynb
@@ -213,6 +213,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks_test = [] \n",
+    "for\n",
     "\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
