--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
    "source": [
     "names_and_ranks_test = [] \n",
     "for index in city_indices\n",
-    "    names_and_ranks_test.append(f'{}')\n",
+    "    names_and_ranks_test.append(f'{index + 2}')\n",
     "\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
