Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    ],
    "source": [
     "names_and_ranks_test = [] \n",
-    "for index in city_indices\n",
+    "for index in city_indices:\n",
     "    names_and_ranks_test.append(f'{index + 2}: , {city_names[index]}')\n",
     "\n",
     "\n",
