Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,22 +208,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-4dec83b4d33f>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-4dec83b4d33f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    for index in city_indices\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "names_and_ranks_test = [] \n",
     "for index in city_indices:\n",
     "    names_and_ranks_test.append(f'{index + 2}: , {city_names[index]}')\n",
+    "print(names)\n",
     "\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
