Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,14 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2: , Buenos Aires', '3: , Toronto', '4: , Pyeongchang', '5: , Marakesh', '6: , Albuquerque', '7: , Los Cabos', '8: , Greenville', '9: , Archipelago Sea', '10: , Walla Walla Valley', '11: , Salina Island', '12: , Solta', '13: , Iguazu Falls']\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks_test = [] \n",
     "for index in city_indices:\n",
     "    names_and_ranks_test.append(f'{index + 2}: , {city_names[index]}')\n",
-    "print(names)\n",
+    "print(names_and_ranks_test)\n",
     "\n",
     "\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
